tests/kuttl-test/best-practices/t03-add-ns-quota/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../../../../best-practices/add_ns_quota/add_ns_quota.yaml
assert:
- policy-assert.yaml
unitTest: false
