tests/kuttl-test/best-practices/t03-add-ns-quota/02-install-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../../../../best-practices/add_ns_quota/resource.yaml
assert:
- ../../../../best-practices/add_ns_quota/generatedLimitRange.yaml
- ../../../../best-practices/add_ns_quota/generatedResourceQuota.yaml
unitTest: false
