tests/kuttl-test/best-practices/t03-add-ns-quota/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-ns-quota
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
